--- a/package.json
+++ b/package.json
@@ -16,13 +16,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@types/d3": "^7.4.0",
     "d3": "^7.8.5",
-    "d3-array": "^3.2.4",
-    "d3-axis": "^3.0.0",
-    "d3-scale": "^4.0.2",
-    "d3-selection": "^3.0.0",
-    "d3-transition": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -37,13 +31,10 @@
     "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
-    "@types/d3-array": "^3.0.5",
-    "@types/d3-axis": "^3.0.2",
-    "@types/d3-scale": "^4.0.3",
-    "@types/d3-selection": "^3.0.5",
-    "@types/d3-transition": "^3.0.3",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/d3": "^7.4.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
