Fix type issues

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
+  "packageManager": "yarn@4.0.2",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
