--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/addon-interactions": "^7.1.1",
     "@storybook/addon-links": "^7.1.1",
     "@storybook/addon-styling": "^1.3.4",
+    "@storybook/addon-themes": "^7.5.3",
     "@storybook/blocks": "^7.1.1",
     "@storybook/react": "^7.1.1",
     "@storybook/react-vite": "^7.1.1",
