--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
   "name": "@headless-charts/react",
-  "private": true,
   "version": "0.1.0",
+  "description": "React wrapper for headless-charts",
+  "author": "Hackle dev team",
+  "keywords": [
+    "react",
+    "headless-charts",
+    "charts",
+    "d3",
+    "luxon"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hacklehub/headless-charts.git"
+  },
   "type": "module",
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
