--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@headless-charts/react",
-  "version": "0.1.1",
+  "version": "0.1.4",
   "description": "React wrapper for headless-charts",
   "author": "Hackle dev team",
   "keywords": [
@@ -36,14 +36,15 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.1.1",
-    "@storybook/addon-interactions": "^7.1.1",
-    "@storybook/addon-links": "^7.1.1",
+    "@storybook/addon-essentials": "^7.6.11",
+    "@storybook/addon-interactions": "^7.6.11",
+    "@storybook/addon-links": "^7.6.11",
+    "@storybook/addon-mdx-gfm": "^7.6.11",
     "@storybook/addon-styling": "^1.3.4",
-    "@storybook/addon-themes": "^7.5.3",
-    "@storybook/blocks": "^7.1.1",
-    "@storybook/react": "^7.1.1",
-    "@storybook/react-vite": "^7.1.1",
+    "@storybook/addon-themes": "^7.6.11",
+    "@storybook/blocks": "^7.6.11",
+    "@storybook/react": "^7.6.11",
+    "@storybook/react-vite": "^7.6.11",
     "@storybook/testing-library": "^0.2.0",
     "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -65,7 +66,8 @@
     "eslint-plugin-storybook": "^0.6.13",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.27",
-    "storybook": "^7.1.1",
+    "storybook": "^7.6.11",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
